tests/ui/issues/issue-2849.stderr
error[E0408]: variable `i` is not bound in all patterns
  --> $DIR/issue-2849.rs:5:7
   |
LL |       Foo::Alpha | Foo::Beta(i) => {}
   |       ^^^^^^^^^^             - variable not in all patterns
   |       |
   |       pattern doesn't bind `i`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0408`.
